--- a/SquadApplication/SquadApplication.csproj
+++ b/SquadApplication/SquadApplication.csproj
@@ -70,6 +70,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="ViewCustom\HomePage.xaml.cs">
+	    <DependentUpon>HomePage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
 	  <MauiXaml Update="ViewCustom\AppendPolygonPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
@@ -100,7 +106,7 @@
 	  <MauiXaml Update="ViewCustom\PolygonsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="ViewCustom\ProfilePage.xaml">
+	  <MauiXaml Update="ViewCustom\HomePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="ViewCustom\RentalsPage.xaml">
