add cache service

--- a/SquadApplication/SquadApplication.csproj
+++ b/SquadApplication/SquadApplication.csproj
@@ -91,6 +91,9 @@
 	  <MauiXaml Update="ViewCustom\CreateEventPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="ViewCustom\CreateOrUpdateRental.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="ViewCustom\EditEquipmentPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
